ey-cart.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ey-cart-deployment
  namespace: project-ns
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: ey-cart

  template:
    metadata:
      labels:
        app: ey-cart
    spec:
      containers:
      - name: ey-cart
        image: muralisocial123/ey-cart:v1.1.0
        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: ey-cart-service
  namespace: project-ns
spec:
  selector:
    app: ey-cart
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
