fitnes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deployment
  namespace: project-ns
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: fitness

  template:
    metadata:
      labels:
        app: fitness
    spec:
      containers:
      - name: fitness
        image: muralisocial123/fitness-app:v1.0.1
        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
  namespace: project-ns
spec:
  selector:
    app: fitness
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
