flower.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deployment
  namespace: project-ns
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: flower

  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
      - name: flower
        image: muralisocial123/kyndrl-flower-app:v1.1.0 
        ports:
        - containerPort: 3015

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: flower-service
  namespace: project-ns
spec:
  selector:
    app: flower
  ports:
  - protocol: TCP
    port: 3015
    targetPort: 3015
  type: ClusterIP
