ey-cart-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ey-cart-route
  namespace: project-ns
spec:
  parentRefs:
  - name: likhitha-kgateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefix: /

    backendRefs:
    - name: ey-cart-service
      port: 3000
