flower-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flower-route
  namespace: project-ns
spec:
  parentRefs:
  - name: likhitha-kgateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /flower

    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /

    backendRefs:
    - name: flower-service
      port: 3015
